migration to elasticsearch java client